# audio-ml-projects

./: .gitignore  Makefile  README.md  feature_extraction.py  features.ipynb  pyproject.toml  test.py
Kicks/: Kick 01 (Young-Holt Unlimited - Blood in the Streets).wav.asd  Kick 02 (Young-Holt Unlimited - Blood in the Streets).wav.asd  Kick 03 (Young-Holt Unlimited - Wah Wah Man).wav.asd  Kick 04 (Young-Holt Unlimited - Wah Wah Man).wav.asd  Kick 05 (Giorgio Moroder - From Here To Eternity).wav.asd  Kick 06 (Cerrone - Black is Black).wav.asd  Kick 08 (Space Art - Love Machine).wav.asd  Kick 09 (Maya - Lait de coco [Dub]).wav.asd  Kick 10 (Yannick Chevalier - Ecoute le son du soleil [Instrumental]).wav.asd  Kick 11 (Caramel - L'amour toujours l'amour).wav.asd  Kick 12 (Cerrone - Rocket In The Pocket).wav.asd  Kick 13 (Cerrone - Rock Me).wav.asd  Kick 14 (Grace Jones - Victor Should Have Been A Jazz Musician).wav.asd  Kick 15 (Grace Jones - Victor Should Have Been A Jazz Musician).wav.asd  Kick 16 (Grace Jones - Sinning).wav.asd  Kick 17 (Naomi Peterson - Sweet Naomi Rap).wav.asd  Kick 18 (Naomi Peterson - Sweet Naomi Rap).wav.asd  Kick 19 (Willie Wood & Willie Wood Crew - Willie Rap).wav.asd  Kick 20 (Karisma - Got You Dancing [Instrumental]).wav.asd  Kick 21 (Patrice Rushen - I Was Tired Of Being Alone).wav.asd  Kick 22 (Skyy - I Can't Get Enough).wav.asd  Kick 23 (Skyy - Jam The Box).wav.asd  Kick 24 (Skyy - Questions No Answers).wav.asd  Kick 25 (Skyy - Love Attack).wav.asd  Kick 26 (Gwen Guthrie - Seventh Heaven).wav.asd  Kick 27 (Gwen Guthrie - Joy Riders).wav.asd  (+15 more)
(+52 files in other folders)
